# MLOps-and-Al-Infra-internship

./: .dockerignore  .env.example  .gitignore  COOLIFY_SETUP.md  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agent/: intent.py  memory.py  models.py  stt.py  tools.py
things/: dockling.py  implementation.md  plan.md  research.md
things/Mem0_ AI_ML & Generative AI Developer Intern Assignment/: Mem0_ AI_ML & Generative AI Developer Intern Assignment.md
